--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.password=${JDBC_PASSWORD}
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
+
+
+# ChatGPT API Configuration
+chatgpt.api.key=${CHATGPT_API_KEY}
+chatgpt.api.url=https://api.openai.com/v1/completions
