--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=mealguider
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.address=192.168.1.2
 server.port=8080
 
 spring.datasource.url=${JDBC_DATABASE_URL}
@@ -15,4 +14,4 @@ server.error.include-stacktrace=never
 
 # ChatGPT API Configuration
 chatgpt.api.key=${CHATGPT_API_KEY}
-chatgpt.api.url=https://api.openai.com/v1/completions
+chatgpt.api.url=https://api.openai.com/v1/chat/completions
