--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://mealguider.mysql.database.azure.com:3306/mealguider}
 spring.datasource.username=${JDBC_USERNAME}
 spring.datasource.password=${JDBC_PASSWORD}
 
