--- a/.github/workflows/master_mealguider.yml
+++ b/.github/workflows/master_mealguider.yml
@@ -60,4 +60,8 @@ jobs:
           app-name: 'mealguider'
           slot-name: 'Production'
           package: '*.jar'
-          
+        env:
+          JDBC_DATABASE_URL: ${{ secrets.JDBC_DATABASE_URL }}
+          JDBC_USERNAME: ${{ secrets.JDBC_USERNAME }}
+          JDBC_PASSWORD: ${{ secrets.JDBC_PASSWORD }}
+          CHATGPT_API_KEY: ${{ secrets.CHATGPT_API_KEY }}
