--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://mealguider.mysql.database.azure.com:3306/mealguider}
-spring.datasource.username=${JDBC_USERNAME}
-spring.datasource.password=${JDBC_PASSWORD}
+spring.datasource.url=${JDBC_DATABASE_URL:${APPSETTING_JDBC_DATABASE_URL}}
+spring.datasource.username=${JDBC_USERNAME${APPSETTING_JDBC_USERNAME}}
+spring.datasource.password=${JDBC_PASSWORD:${APPSETTING_JDBC_PASSWORD}}
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
 
 
 # ChatGPT API Configuration
-chatgpt.api.key=${CHATGPT_API_KEY}
+chatgpt.api.key=${CHATGPT_API_KEY:${APPSETTING_CHATGPT_API_KEY}}
 chatgpt.api.url=https://api.openai.com/v1/chat/completions
