spelling error in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
 spring.datasource.url=${JDBC_DATABASE_URL:${APPSETTING_JDBC_DATABASE_URL}}
-spring.datasource.username=${JDBC_USERNAME${APPSETTING_JDBC_USERNAME}}
+spring.datasource.username=${JDBC_USERNAME:${APPSETTING_JDBC_USERNAME}}
 spring.datasource.password=${JDBC_PASSWORD:${APPSETTING_JDBC_PASSWORD}}
 
 spring.jpa.show-sql=true
