--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/defaultdb}
-spring.datasource.username=${JDBC_USERNAME:default_user}
-spring.datasource.password=${JDBC_PASSWORD:default_password}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:h2:mem:testdb}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
