--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=mealguider
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=${PORT:8080}
 
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:h2:mem:testdb}
-spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://dpg-d64hsc7gi27c73b29odg-a:5432/mealguider}
+spring.datasource.username=${JDBC_USERNAME:mathiasfri}
 spring.datasource.password=${JDBC_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
